# atri-elo

./: Cargo.toml  LICENSE  README.md
migrations/: 20220423144452_init.sql
src/: main.rs  model.rs  route.rs  util.rs
src/common/: model.rs
src/model/: mod.rs  regular.rs
src/regular/: model.rs
templates/: base.tera  index.tera
